# hwloc

contrib/windows-cmake/: CMakeLists.txt  have_x86_cpuid.c  private_config.h.in
tests/hwloc/: CMakeLists.txt
